Misc Changes *Fixed Visibility of texts on achievements section + updated it More info about me. xd

--- a/css/style.css
+++ b/css/style.css
@@ -526,19 +526,18 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-/* Services Section
+/* Achievements Section
 --------------------------------*/
-#services {
-  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/services-bg.jpg") fixed center center;
+#achievements {
   background-size: cover;
   padding: 80px 0 60px 0;
 }
 
-#services .service-item {
+#achievements .service-item {
   margin-bottom: 20px;
 }
 
-#services .service-icon {
+#achievements .service-icon {
   float: left;
   background: #03C4EB;
   padding: 16px;
@@ -547,31 +546,31 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: 1px solid #03C4EB;
 }
 
-#services .service-icon i {
+#achievements .service-icon i {
   color: #fff;
   font-size: 24px;
 }
 
-#services .service-item:hover .service-icon {
+#achievements .service-item:hover .service-icon {
   background: #fff;
 }
 
-#services .service-item:hover .service-icon i {
+#achievements .service-item:hover .service-icon i {
   color: #03C4EB;
 }
 
-#services .service-title {
+#achievements .service-title {
   margin-left: 80px;
   font-weight: 700;
   margin-bottom: 15px;
   text-transform: uppercase;
 }
 
-#services .service-title a {
+#achievements .service-title a {
   color: #111;
 }
 
-#services .service-description {
+#achievements .service-description {
   margin-left: 80px;
   line-height: 24px;
 }
